# cmake0

./: .gitignore  README
2/: CMakeLists.txt
3/: CMakeLists.txt
3/.cache/clangd/index/: main.cpp.2896F39FC655AEFF.idx  printhello.cpp.A5077E327ED21EF5.idx  printhello.h.460E297D30057AEE.idx
3/example/: CMakeLists.txt  main.cpp
3/include/: CMakeLists.txt
3/include/simplecmake/: printhello.h
3/src/: CMakeLists.txt  printhello.cpp
4/: CMakeLists.txt
4/cmake/: concurrency-config.cmake
4/examples/: main.cpp
4/include/: CMakeLists.txt
4/include/concurrency/: messagebuffer.h  threadpool.h  workerthread.h
4/tests/: CMakeLists.txt  messagebuffer_test.cpp  threadpool_test.cpp  workerthread_test.cpp
