project(Concurrency)

include(FetchContent)

FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip)

FetchContent_GetProperties(googletest)

if (NOT googletest_POPULATED)
  FetchContent_Populate(googletest)
  add_subdirectory(
    ${googletest_SOURCE_DIR}
    ${googletest_BINARY_DIR} EXCLUDE_FROM_ALL)
endif()

# define my tests
enable_testing()

add_executable(tests
  messagebuffer_test.cpp
  threadpool_test.cpp
  workerthread_test.cpp)

target_link_libraries(tests
  gtest_main
  concurrency)

include(GoogleTest)
gtest_discover_tests(tests)
